examples/passing/MutRec.purs
f 0 = 0
f x = g x + 1

g x = f (x / 2)
