examples/failing/SuggestComposition.purs
module SuggestComposition where

import Prelude

f = g . g where g = (+1)
